# Django_Projects

Django_Project_01/: db.sqlite3  manage.py  pyproject.toml
Django_Project_01/Django_Project_01/: asgi.py  settings.py  urls.py  wsgi.py
Django_Project_01/notes/: admin.py  models.py  urls.py  views.py
Django_Project_01/notes/api/: permissions.py  serializers.py  urls.py  views.py
Django_Project_01/notes/migrations/: 0001_initial.py  0002_initial.py  0003_note_image.py  0004_note_mod_time_note_created_at_index.py  0005_tag_note_tags.py
Django_Project_01/notes/templates/note/: create_note.html  create_ok.html  note.html  tag_notes.html  tags.html  update_note.html  update_ok.html  user_notes.html  your_notes.html
Django_Project_01/templates/: about.html  base.html  home.html  menu.html
Django_Project_01/templates/registration/: login.html  register.html
Django_Project_01/user/: admin.py  models.py  urls.py  views.py
Django_Project_01/user/migrations/: 0001_initial.py
Django_Project_01/user/templates/user/: profile.html  reg_ok.html  users.html
Django_Project_02/: db.sqlite3  manage.py  pyproject.toml
Django_Project_02/Django_Project_02/: asgi.py  settings.py  urls.py  wsgi.py
Django_Project_02/app/: forms.py  models.py  views.py
Django_Project_02/app/migrations/: 0001_initial.py  0002_initial.py
Django_Project_02/templates/: create-ingredient.html  home.html  menu.html  recipes-list.html  welcome.html
Django_Project_02/users/: forms.py
Django_Project_02/users/migrations/: 0001_initial.py
